--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "nanoid": "^5.0.3",
     "react": "^18.2.0",
     "react-confetti": "^6.1.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
